[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "lxml>=5.3.2",
    "openai>=1.75.0",
    "playwright>=1.51.0",
    "psycopg2-binary>=2.9.10",
    "requests-oauthlib>=2.0.0",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.40",
    "trafilatura>=2.0.0",
    "werkzeug>=3.1.3",
    "markupsafe>=3.0.2",
    "flask-session>=0.8.0",
]
